# lazyregistry

./: .gitignore  README.md  context7.json  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  custom_pretrained.py  plugin_system.py  pretrained.py
src/lazyregistry/: __init__.py  exceptions.py  pretrained.py  registry.py
tests/: test_examples.py  test_pretrained.py  test_registry.py
