[project]
name = "lazyregistry"
version = "0.1.0"
description = "A lightweight Python library for lazy-loading registries with namespace support and type safety."
readme = "README.md"
authors = [
    { name = "Suhwan Choi", email = "milkclouds00@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "pytest-cov",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 119

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lazyregistry/_version.py"

[tool.coverage.run]
omit = [
    "src/lazyregistry/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]